--- a/thesis.tex
+++ b/thesis.tex
@@ -9,12 +9,12 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-\includeonly{chapter_events,chapter_geomorph}
+%\includeonly{chapter_events,chapter_geomorph}
 %\includeonly{chapter2}
 
 \usepackage{rotating}
 \usepackage[labelfont=bf]{caption}
-%\usepackage{lineno}
+\usepackage{lineno}
 %\linenumbers
 \usepackage{listings}
 %\usepackage{epigraph}
