--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -4,11 +4,11 @@
 
 \section{Introduction}
 
-Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the potentially changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, The drive to understand how landscapes respond to climatic conditions is aided particularly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
+Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the possibility of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, The drive to understand how landscapes respond to climatic conditions is aided greatly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
 
-Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case-to-case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows \citet{turowski2013large} also report that the behaviour is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
+Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case-to-case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows \citet{turowski2013large} also report that the dynamics of erosion are is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional, depending on the preconditioning of the catchment by previous events. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
 
-Temporal variability in rainfall patterns is shown to control the evolution of landscapes over geological timescales \citep{Tucker2000,Solyom2004}, influencing the geomorphology of drainage basins and geometry of channel networks. The influence of spatial variability in rainfall patterns has also been shown to affect the outcome of long-term topographic evolution \citep{solyom2007importance,han2014modeling,han2015measuring}, as well as decadal--millenial scale studies that have investigate the role of rainfall resolution on sediment yields and morphological change in catchments \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns in single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
+Temporal variability in rainfall patterns is shown to control the evolution of landscapes over geological timescales, with the ability to influence the geomorphology of drainage basins and geometry of channel networks \citep{Tucker2000,Solyom2004}. The influence of spatial variability in rainfall patterns has also been shown to affect the outcome of long-term topographic evolution, creating distinct topographic signatures in landscapes subject to orogoraphic rainfall gradients \citep{solyom2007importance,han2014modeling,han2015measuring}. Sediment yields and morphological change have also been shown to be sensitive to the resolution of rainfall inputs over decadal to millenial timescales \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns during single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
 
 % A clear relationship between rainfall intensity, flood magnitude, and erosional dynamics is not always observed in case studies (Anton 2012), suggesting that the links between precipitation, hydrological response, and sediment transport are not yet fully understood.
 %
@@ -16,25 +16,25 @@ Temporal variability in rainfall patterns is shown to control the evolution of l
 
 % More detail
 \subsection{Theory}
-The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localised convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment \citep{Peleg2014}. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is likely to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003,han2015measuring}. As such, rainfall-runoff generation, local river and tributary flow, and erosion rates may vary considerably within individual drainage basins. 
+The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localised convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment \citep{Peleg2014}. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is likely to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003,han2015measuring}. As such, rainfall-runoff generation, local river and tributary discharge, and erosion rates may vary considerably within individual drainage basins. 
 
-As explored in Chapter \ref{chapter_landscape_evol}, current numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost or smoothed-out, and with discharge being a function of rainfall rate, this smoothing should therefore be expected to propagate through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes \citep{coulthard1998non,phillips2003sources}. The variability of precipitation is considered to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}. As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. 
+As discussed in Chapter \ref{chapter_landscape_evol}, current numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost or smoothed-out. With discharge being a function of rainfall rate, this smoothing should therefore be expected to propagate through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes \citep{coulthard1998non,phillips2003sources}. The variability of precipitation is considered to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}. As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. 
 %Non-linearity in geomorphic process laws \citep{coulthard1998non,phillips2003sources,coulthard2007cellular} should dictate that catchments are also geomorphically sensitive to the spatial distribution of rainfall. 
 
-Rainfall resolution has been demonstrated to exert a control over sediment yields over decadal and millennial timescales \citep{coulthard2016sensitivity}. In a numerical modelling study of the River Swale catchment, \citet{coulthard2016sensitivity} show that local distribution of erosion as well as catchment-wide sediment yields were predicted to increase by up to 100\% as rainfall data resolution was increased. The study looked at the effects of rainfall spatial data resolution as well the temporal resolution of data, showing both to demonstrate a control over sediment fluxes in a catchment. The study focused on landscape evolution time scales of decades to centuries, rather than individual storm events, and in this study this gap at the shorter end of the catchment evolution time scale will be filled. 
+Rainfall resolution has been demonstrated to exert a control over sediment yields over decadal and millennial timescales \citep{coulthard2016sensitivity}. In a numerical modelling study of the River Swale catchment, UK, \citet{coulthard2016sensitivity} show that local distribution of erosion differed and catchment-wide sediment yields were predicted to increase by up to 100\% as rainfall data resolution was increased. The study looked at the effects of rainfall input data grid-spacing as well the temporal resolution of rainfall data, showing both to have a control over sediment erosion within the catchment. The results were based on landscape evolution model simulations over a period of 30 years, rather than individual storm events.
 
-In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parameterisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In studies of long term landscape evolution, the sensitivity of landscapes to the spatial distribution of rainfall has been investigated to some extent -- particularly the imprint of orographic precipitation on landscapes \citep[e.g][]{Roe2002,Anders2008,han2015measuring}. In Chapter \ref{chapter_HAIL-CAESAR}, an existing landscape-evolution model was redeveloped to address some of the computational issues and make it suitable for deployment on a high-performance computing service, enabling more effective use of higher resolution digital topography data to initialise the terrain surface (Chapter \ref{chapter_events}) and finer-resolution rainfall input data to drive the model. 
+In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parameterisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In Chapter \ref{chapter_HAIL-CAESAR}, an existing landscape-evolution model was redeveloped to address some of the computational issues and make it suitable for deployment on a high-performance computing service, enabling more effective use of higher resolution digital topography data to initialise the terrain surface (Chapter \ref{chapter_events}) and finer-resolution rainfall input data to drive the model.
 
 \subsection{Objectives}
-The aim of this chapter is to assess how erosional processes are sensitive to the details of precipitation across a catchment during individual storms. The focus in this study is to quantify the sensitivity of catchment-scale erosional processes to the spatial distribution of rainfall during flood events, using the case studies outlined in Chapter \ref{chapter_events}.
+The aim of this chapter is to assess how erosional processes are sensitive to the details of precipitation across a catchment during individual storms. The focus in this study is to quantify the sensitivity of erosional processes to the spatial distribution of rainfall during flood events, using the case studies outlined in Chapter \ref{chapter_events}.
 
 The following questions are explored through the use of numerical modelling simulations:
 
-\begin{itemize}
+\begin{enumerate}
 \item Are fluvial erosion and sediment transport processes sensitive to the details of precipitation distribution at the catchment scale during single storm events?
 \item Does the choice of erosional model operating within the catchment influence sensitivity to rainfall patterns? 
 \item What are the implications of this for longer term landscape evolution? 
-\end{itemize}
+\end{enumerate}
 
 %The hypothesis for this chapter can be summarised (as in Chapter \ref{chapter_events}, Section \ref{section_experiment_design}) as follows:
 %
@@ -46,9 +46,9 @@ The following questions are explored through the use of numerical modelling simu
 %  \end{enumerate}
 %\end{enumerate}
 
-To build upon the work done in previous studies \citep[e.g.][]{coulthard2016sensitivity}, this chapter focuses on timescales not previously investigated: the sensitivity of catchment-scale erosion to the spatial details of severe rain storms. 
+To build upon the work done in previous studies \citep[e.g.][]{han2016measuring, coulthard2016sensitivity}, this chapter focuses on the sensitivity of sediment yield and erosion distribution to rainfall heterogeneity at timescales not previously investigated -- single severe rain storms. 
 %Landscape response is investigated using a numerical landscape evolution model that incorporates a dynamic water-routing component \citep{bates2010simple} and a range of fluvial erosion and sediment transport laws \citep{howard1983channel,wilcock2003surface,whipple1999dynamics}. 
-Results from series of numerical simulations set out in Chapter \ref{chapter_events} are presented to analyse how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake (Chapter \ref{chapter_events}).
+Results from series of numerical simulations set out in Chapter \ref{chapter_events} are presented to assess how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake (Chapter \ref{chapter_events}).
 
 %\section{Experiment design}
 %
@@ -69,10 +69,17 @@ Results from series of numerical simulations set out in Chapter \ref{chapter_eve
 %\end{table}
 
 \section{Results}
+
+Sediment flux predictions are presented at a catchment-wide scale, measured from the outlet of each catchment (Figures \ref{fig_boscastle_sedigraph_ensemble}, \ref{fig_ryedale_sedigraph_ensemble}). The spatial distribution of sediment deposition is presented in the form of 1D longitudinal profiles along the main channel (Figures \ref{fig_boscastle_swath_tlim}, \ref{fig_ryedale_swath_tlim}), as well as 2D planform maps of erosion and deposition distribution (Figures \ref{fig_boscastle_erodediff_grid_tlim}, \ref{fig_boscastle_erodediff_uniform_tlim}, \ref{fig_boscastle_2dplan_erosion_ensemble}, \ref{fig_boscastle_2dplan_erosion_ensemble_SE}, \ref{fig_ryedale_erodediff_lower_grid_tlim}, \ref{fig_ryedale_erodediff_lower_uniform_tlim}, \ref{fig_ryedale_2dplan_erosion_ensemble})
+
 \subsection{Catchment sediment flux}
 % General description of all results.
 %In contrast to water fluxes (Chapter \ref{chapter_flood_model_sensitivity}), 
-Sediment flux from both catchments was found to be most sensitive to the sediment erosion parameterisation, rather than the spatial detail of rainfall inputs. For all catchments and events simulated, sediment flux from the catchment was higher in the simulations using higher resolution rainfall input data. The patterns of peak sediment discharge also mirrored that of water discharge, with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
+Sediment flux from both catchments was found to be most sensitive to the sediment erosion parameterisation, rather than the spatial detail of rainfall inputs (Figures \ref{fig_boscastle_sedigraph_ensemble}, \ref{fig_ryedale_sedigraph_ensemble}). For both catchments simulated, sediment flux from each catchment was higher in the simulations using the transport-limited erosion law, by up to an order of magnitude. All detachment-limited simulations resulted in a much lower prediction in sediment fluxes.
+
+The influence of rainfall input data spatial resolution played a secondary role in determining sediment yields. In almost simulations, when the same erosion law parameterisation was used, sediment yields were greater with gridded rainfall data input. The only exception was in the Boscastle detachment-limited simulations (\texttt{DLIM}), where sediment output was actually slightly lower with gridded rainfall input to the simulation (Figure \ref{fig_boscastle_sedigraph_ensemble}).
+
+The patterns of peak sediment discharge also mirrored that of water discharge ( see Chapter \ref{chapter_flood_model_sensitivity}), with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
 
 \begin{figure}[t]
 \includegraphics[width=14cm]{chp06_figures_scripts/figure_boscastle_sedigraph_ensemble.eps}
@@ -88,9 +95,9 @@ Sediment flux from both catchments was found to be most sensitive to the sedimen
 
 % Describe planform variations in erosion and deposition
 \subsection{Spatial variations in sediment and bedrock erosion}
-The main spatial variation seen in sediment erosion is seen in river channels, where the shear stresses required to initiate sediment transport are greatest due to the flow of water. The amount of erosion in each simulation was highly sensitive to parameterisation choice of the sediment erosion and transport law, with the choice of rainfall input data (gridded vs uniform) being only a secondary controlling factor on erosion amounts, all other factors being equal. This behaviour was seen on all simulations, in Figure \ref{fig_boscastle_2dplan_erosion_ensemble} and \ref{fig_ryedale_2dplan_erosion_ensemble}. 
+The main spatial variation seen in sediment erosion is seen within river channels. The amount of erosion in each simulation was highly sensitive to parameterisation choice of the sediment erosion and transport law, with the choice of rainfall input data (gridded vs uniform) being only a secondary controlling factor on the spatial distribution of erosion, all other factors being equal. This behaviour was seen on all simulations, shown in Figures \ref{fig_boscastle_2dplan_erosion_ensemble} and \ref{fig_ryedale_2dplan_erosion_ensemble}. 
 
-To highlight the variation in erosion along the river channel, longitudinal profiles showing the average change in elevation after the storm are shown in Figures \ref{fig_boscastle_swath_tlim} and \ref{fig_ryedale_swath_tlim}. The longitudinal profile shows the variation in erosion along the main channel within each catchment, averaged along a 10 m wide swath centred on the midpoint of the channel. The swath profiling technique is adapted from \citep{hergarten2014extracting}. To reduce the number of points plotted along the swath profile, erosion is also averaged longitudinally, using bins spaced every 200m in the Ryedale catchment and every 50m in the Valency catchment.
+To highlight the variation in erosion along the river channel, longitudinal profiles showing the average change in elevation after the storm are shown in Figures \ref{fig_boscastle_swath_tlim} and \ref{fig_ryedale_swath_tlim}. The longitudinal profile shows the variation in erosion along the main channel within each catchment, averaged along a 10m wide swath centred on the midpoint of the channel. The swath profiling technique is adapted from \citep{hergarten2014extracting}. To reduce the number of points plotted along the swath profile, erosion is also averaged longitudinally, using bins spaced every 200m in the Ryedale catchment and every 50m in the Valency catchment.
 
 % Swath profiles
 % Boscastle TLIM
